# haskell-game-of-life

./: .gitignore  Conway.cabal  Conway.hs  Graphics.hs  Life.hs  Main.hs  README  World.hs
src/: Conway.hs  Graphics.hs  LifeSlow.hs  Main.hs  World.hs
