Name:           Conway
Version:        0.0
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Geoff Hulette
Synopsis:       Conway's game of Life
Build-Type:     Simple

Executable conway
  Main-Is:        Main.hs
  Hs-Source-Dirs: src
  Build-Depends:	base >= 4,array,random,GLUT,OpenGL
  GHC-Options: -O2
